fix: Backpack Preview not working on items like Builder's Ruler, Wand etc., closes #141 fix: after closing the inventory 'Freeze Backpack Preview' screen does not disappear